# hypothesis-llm

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml  statistics_properties.json
examples/: notes.md  statistics_properties.json  statistics_reviews.json  statistics_reviews_2.json  statistics_reviews_3.json  statistics_tests.py  statistics_tests_improved.py  statistics_tests_improved_2.py  statistics_tests_improved_3.py
src/: __init__.py  cli.py  constants.py  improve.py  prompts.py  review.py  suggest.py  test.py  utils.py  write.py
